src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__program_missing_inout_assignment.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
error[E030]: Missing inout parameter: inout1
   ┌─ <internal>:18:13
   │
18 │             prog(input1 := var1, output1 => var2);
   │             ^^^^ Missing inout parameter: inout1

error[E030]: Missing inout parameter: inout1
   ┌─ <internal>:19:13
   │
19 │             prog(var1, var2);
   │             ^^^^ Missing inout parameter: inout1

error[E030]: Missing inout parameter: inout1
   ┌─ <internal>:20:13
   │
20 │             prog(var1);
   │             ^^^^ Missing inout parameter: inout1

error[E030]: Missing inout parameter: inout1
   ┌─ <internal>:21:13
   │
21 │             prog();
   │             ^^^^ Missing inout parameter: inout1


